<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Вызов такси</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="username">Номер телефона</string>
    <string name="password">Пароль</string>
    <string name="title_activity_order_from">OrderFromActivity</string>
    <string name="from">Адрес отправления</string>
    <string name="street">Улица</string>
    <string name="house">Дом</string>
    <string name="entrance">Подъезд</string>
    <string name="other_landmark">Другой ориентир</string>
    <string name="current_location">Текущее местоположение</string>
    <string name="show_on_the_map">Указать на карте</string>
    <string name="creating_order">Оформление заказа</string>
    <string name="next_button">Далее &gt;&gt;</string>
    <string name="place_order">Вызвать такси</string>
    <string name="to">Адрес назначения</string>
    <string name="time_and_contacts">Время и контакты</string>
    <string name="phone_number">Контактный тел.</string>
    <string name="client_name">Ваше имя</string>
    <string name="pickup_time">Время подачи</string>
    <string name="now">Сейчас</string>
    <string name="location_is_unknown">Текущее местоположение неизвестно!</string>
    <string name="kursk">Курск</string>
    <string name="title_error">Ошибка</string>
    <string name="msg_order_data_incomplete">Недостаточно данных для отправки заказа</string>
    <string name="wait_for_order_submit">Отправляем Ваш заказ...</string>
    <string name="be_more_precise">Поточнее, пожалуйста!</string>
    <string name="title_success">Ура!</string>
    <string name="msg_order_placed_successfully">Ваш заказ успешно зарегистрирован.</string>
    <string name="msg_order_place_error">Ошибка размещения заказа.</string>
    <string name="state_no_such_order">Неверный номер заказа</string>
    <string name="state_accepted">Заказ обрабатывается</string>
    <string name="state_looking_for_car">Поиск свободной машины</string>
    <string name="state_car_assigned">Машина найдена</string>
    <string name="state_car_approaches">Машина в пути</string>
    <string name="state_car_arrived">Машина подана и ожидает Вас</string>
    <string name="state_on_the_way">Сейчас мы в пути</string>
    <string name="state_closed">Поездка завершена</string>
    <string name="state_car_not_found">Не удалось найти машину</string>
    <string name="state_cancelled">Заказ отменён</string>
    <string name="state_edited">Заказ уточнён оператором</string>
    
</resources>