<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:paddingBottom="6dp"
    android:paddingLeft="36dp"
    android:paddingRight="6dp"
    android:paddingTop="12dp" >

    <TimePicker
        android:id="@+id/tpPickupTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvPickupTime"
        android:visibility="gone" />

    <DatePicker
        android:id="@+id/dpPickupDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tpPickupTime"
        android:layout_toRightOf="@+id/tpPickupTime"
        android:visibility="gone" />

    <CheckBox
        android:id="@+id/cbNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tvPickupTime"
        android:checked="true"
        android:text="@string/now" />

    <TextView
        android:id="@+id/tvPickupTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cbNow"
        android:layout_alignBottom="@+id/cbNow"
        android:layout_alignParentLeft="true"
        android:text="@string/pickup_time" />

    <EditText
        android:id="@+id/edtPhoneNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tpPickupTime"
        android:layout_toRightOf="@+id/tvPhoneNumber"
        android:ems="10"
        android:inputType="phone" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edtPhoneNumber"
        android:layout_alignBottom="@+id/edtPhoneNumber"
        android:layout_alignParentLeft="true"
        android:text="@string/phone_number" />

    <EditText
        android:id="@+id/edtClientName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtPhoneNumber"
        android:layout_toRightOf="@+id/tvClientName"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvClientName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edtClientName"
        android:layout_alignBottom="@+id/edtClientName"
        android:layout_alignParentLeft="true"
        android:text="@string/client_name" />

</RelativeLayout>